--- a/index.jade
+++ b/index.jade
@@ -81,5 +81,5 @@ html(lang="en")
 					input(type="submit" value="Send Message")
 			p(class="copyright") &copy; Apollo 2016
 				
-		script(src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
+		script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
 		script(src="assets/js/min/functions-min.js")
