--- a/assets/css/1-tools/_icon-font.scss
+++ b/assets/css/1-tools/_icon-font.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('1-tools/fonts/icomoon.eot?3hi6ws');
-  src: url('1-tools/fonts/icomoon.eot?3hi6ws#iefix') format('embedded-opentype'),
-       url('1-tools/fonts/icomoon.ttf?3hi6ws') format('truetype'),
-       url('1-tools/fonts/icomoon.woff?3hi6ws') format('woff'),
-       url('1-tools/fonts/icomoon.svg?3hi6ws#icomoon') format('svg');
+  src: url('fonts/icomoon.eot?3hi6ws');
+  src: url('fonts/icomoon.eot?3hi6ws#iefix') format('embedded-opentype'),
+       url('fonts/icomoon.ttf?3hi6ws') format('truetype'),
+       url('fonts/icomoon.woff?3hi6ws') format('woff'),
+       url('fonts/icomoon.svg?3hi6ws#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
