--- a/index.jade
+++ b/index.jade
@@ -81,5 +81,6 @@ html(lang="en")
 					input(type="submit" value="Send Message")
 			p(class="copyright") &copy; Apollo 2016
 				
-		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
+		script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
+		script window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')
 		script(src="assets/js/functions-min.js")
