Added meta information

--- a/index.jade
+++ b/index.jade
@@ -5,10 +5,12 @@ html(lang="en")
 		meta(charset="utf-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
-		meta(name="author" content="buckymaler.com")
+		meta(name="description" content="Jade website template")
+		meta(name="keywords" content="apollo, jade, template, html, sass, jquery")
+		meta(name="author" content="Bucky Maler")
 		link(rel="stylesheet" href="assets/css/main.css")
 	body
-			
+
 		section(id="hero")
 			include ./letters/a.html
 			header
@@ -80,7 +82,7 @@ html(lang="en")
 					textarea(placeholder="Message")
 					input(type="submit" value="Send Message")
 			p(class="copyright") &copy; Apollo 2016
-				
+
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
 		script window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')
 		script(src="assets/js/functions-min.js")
